# fetch-take-home-exercise

./: .gitignore  README.md  pyproject.toml  task_1.py  task_1.txt  task_4.py  task_5.py  task_5.txt
data/: multitask_datamodule.py  sentences.txt
logs/version_0/: events.out.tfevents.1739772029.Gregg-ML-Laptop.27784.0  events.out.tfevents.1739790953.Gregg-ML-Laptop.25924.0
models/: multitask_transformer.py  sentence_transformer.py
