[tool.poetry]
name = "gtabot-fetch-take-home-exercise"
version = "2025.02.17"
authors = ["Gregg Tabot <gregg.tabot@gmail.com>"]
description = "Machine Learning Engineer Take Home Exercise"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
datasets = "*"
pytorch-lightning = "*"
tensorboard = "*"
torch = [
    {platform = "darwin", version = "*", source = "pypi"},  # macOS uses CPU-only
    {platform = "linux", version = "*", source = "torch-cuda"},
    {platform = "win32", version = "*", source = "torch-cuda"},
]
transformers = "*"

[[tool.poetry.source]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"
